# ForgePipeline-AI

./: .gitignore  README.md  cli.py  execution_engine.py  import subprocess.py  import typer.py  index.html  intent_parser.py  package.json  planning_agent.py  pyproject.toml  requirements.txt  vite.config.ts
.github/workflows/: __init__.py  ci.yml  intent_parser.py  jekyll-gh-pages.yml
backend/: Dockerfile  requirements.txt
backend/app/: main.py
forgepipeline_ai/: cli.py  knowledge_base.py  planning_agent.py
public/: 404.html
src/: App.tsx  index.css
src/components/: ActivityFeed.tsx  Layout.tsx  Sidebar.tsx  StatCard.tsx  StatusBadge.tsx
src/lib/: types.ts
src/pages/: Containers.tsx  Dashboard.tsx  Deployments.tsx  Projects.tsx  Settings.tsx
